Test/typing/should_fail/attributes.java
package tutu.titi.toto;

class A {
	int j = 2;
	float j = 2.0;
	int j = 2;
}
